--- a/views/admin/pages/dashboard/index.pug
+++ b/views/admin/pages/dashboard/index.pug
@@ -3,3 +3,6 @@ extends ../../layouts/default.pug
 block main 
 
     h1 Đây là trang DashBoard
+
+    div #{user.fullName} 
+    div #{localRoles.permissions}
