--- a/views/admin/pages/roles/permission.pug
+++ b/views/admin/pages/roles/permission.pug
@@ -43,6 +43,83 @@ block main
             each item in roles
               td
                 input(type='checkbox' value=item.id)
+          //- products 
+          tr 
+            td(colspan="3")
+                h5 Sản phẩm 
+          tr(data-name="product_view")
+            td Xem 
+            each item in roles
+              td
+                input(type='checkbox' value=item.id)
+          tr(data-name="product_create")
+            td Thêm
+            each item in roles
+              td
+                input(type='checkbox' value=item.id)
+          tr(data-name="product_edit" ) 
+            td Chỉnh sửa 
+            each item in roles
+              td
+                input(type='checkbox' value=item.id)
+          tr(data-name="product_delete")
+            td Xóa 
+            each item in roles
+              td
+                input(type='checkbox' value=item.id)
+          //- roles
+          tr 
+            td(colspan="3")
+                h5 Nhóm quyền 
+          tr(data-name="roles_view")
+            td Xem 
+            each item in roles
+              td
+                input(type='checkbox' value=item.id)
+          tr(data-name="roles_create")
+            td Thêm
+            each item in roles
+              td
+                input(type='checkbox' value=item.id)
+          tr(data-name="roles_edit" ) 
+            td Chỉnh sửa 
+            each item in roles
+              td
+                input(type='checkbox' value=item.id)
+          tr(data-name="roles_delete")
+            td Xóa 
+            each item in roles
+              td
+                input(type='checkbox' value=item.id)
+          tr(data-name="roles_permission")
+            td Phân quyền 
+            each item in roles
+              td
+                input(type='checkbox' value=item.id)
+          //- Tài khoản 
+          tr 
+            td(colspan="3")
+                h5 Tài khoản  
+          tr(data-name="account_view")
+            td Xem 
+            each item in roles
+              td
+                input(type='checkbox' value=item.id)
+          tr(data-name="account_create")
+            td Thêm
+            each item in roles
+              td
+                input(type='checkbox' value=item.id)
+          tr(data-name="account_edit" ) 
+            td Chỉnh sửa 
+            each item in roles
+              td
+                input(type='checkbox' value=item.id)
+          tr(data-name="account_delete")
+            td Xóa 
+            each item in roles
+              td
+                input(type='checkbox' value=item.id)
 
     form(action="/admin/roles/permissions?_method=PATCH" method="POST", form-change-permissions).d-none
       input(type="text" name='roles')
