--- a/views/admin/partials/header.pug
+++ b/views/admin/partials/header.pug
@@ -1,5 +1,8 @@
 nav.navbar.navbar-expand-lg.navbar-light.bg-light
-      a.navbar-brand(href='#') Admin Panel
+      if user.fullName
+        a.navbar-brand(href='#') #{user.fullName} 
+      else 
+        a.navbar-brand(href='#') Admin Panel 
       button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarNav', aria-controls='navbarNav', aria-expanded='false', aria-label='Toggle navigation')
         span.navbar-toggler-icon
       #navbarNav.collapse.navbar-collapse
