--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -2,15 +2,21 @@
       ul.nav.flex-column
         li.nav-item
           a.nav-link.active(href='#') Dashboard
+        
         li.nav-item
           a.nav-link(href='/admin/users') Users
-        li.nav-item
-          a.nav-link(href='/admin/products') Products
-        li.nav-item
-          a.nav-link(href='/admin/product-category') Categories
-        li.nav-item
-          a.nav-link(href='/admin/roles') Role
-        li.nav-item
-          a.nav-link(href='/admin/roles/permissions') Phân quyền 
-        li.nav-item
-          a.nav-link(href='/admin/accounts') Tài khoản  
+        if localRoles.permissions.includes("product_view")
+          li.nav-item
+            a.nav-link(href='/admin/products') Products
+        if localRoles.permissions.includes("product-category_view")
+          li.nav-item
+            a.nav-link(href='/admin/product-category') Categories
+        if localRoles.permissions.includes("product-category_view")
+          li.nav-item
+            a.nav-link(href='/admin/roles') Role
+        if localRoles.permissions.includes("roles_permission")
+          li.nav-item
+            a.nav-link(href='/admin/roles/permissions') Phân quyền 
+        if localRoles.permissions.includes("account_view")
+          li.nav-item
+            a.nav-link(href='/admin/accounts') Tài khoản  
