--- a/views/admin/partials/header.pug
+++ b/views/admin/partials/header.pug
@@ -3,13 +3,18 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light
         a.navbar-brand(href='#') #{user.fullName} 
       else 
         a.navbar-brand(href='#') Admin Panel 
-      img(src=user.avatar, alt="", style="width: 30px; height: 30px; border-radius: 30px;")
+      if user.avatar
+        a(href="/admin/my-account") 
+          img(src=user.avatar, alt="", style="width: 30px; height: 30px; border-radius: 30px;")
+      else 
+        a(href="/admin/my-account") 
+          img(src="/admin/images/logo_default.png", alt="", style="width: 30px; height: 30px; border-radius: 30px;")
       button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarNav', aria-controls='navbarNav', aria-expanded='false', aria-label='Toggle navigation')
         span.navbar-toggler-icon
       #navbarNav.collapse.navbar-collapse
         ul.navbar-nav.ml-auto
           li.nav-item.active
-            a.nav-link(href='#')
+            a.nav-link(href='/admin/dashboard')
               | Home 
               span.sr-only (current)
           li.nav-item
