--- a/views/admin/pages/roles/permission.pug
+++ b/views/admin/pages/roles/permission.pug
@@ -120,6 +120,31 @@ block main
             each item in roles
               td
                 input(type='checkbox' value=item.id)
+          //- Tin tức 
+          tr 
+            td(colspan="3")
+                h5 Tin tức  
+          tr(data-name="news_view")
+            td Xem 
+            each item in roles
+              td
+                input(type='checkbox' value=item.id)
+          tr(data-name="news_create")
+            td Thêm
+            each item in roles
+              td
+                input(type='checkbox' value=item.id)
+          tr(data-name="news_edit" ) 
+            td Chỉnh sửa 
+            each item in roles
+              td
+                input(type='checkbox' value=item.id)
+          tr(data-name="news_delete")
+            td Xóa 
+            each item in roles
+              td
+                input(type='checkbox' value=item.id)
+          
 
     form(action="/admin/roles/permissions?_method=PATCH" method="POST", form-change-permissions).d-none
       input(type="text" name='roles')
