--- a/views/clients/pages/home/index.pug
+++ b/views/clients/pages/home/index.pug
@@ -4,3 +4,16 @@ extends ../../layouts/default.pug
 block main 
 
     h1 Day La Trang Chu 
+
+    .container(style='margin-top: 30px')
+      h2 Sản phẩm nổi bậc
+      .row
+       each item in productFeatured  
+        .col-md-4
+          .card.product-card.mb-4
+            img.card-img-top.product-img(src=item.thumbnail, alt='Product Image' style='height: 350px')
+            .card-body
+              h5.card-title #{item.title}
+              p.card-text Price: $#{item.priceNew}
+              p.card-text Old Price: #{item.price}
+              a.btn.btn-primary(href='#') Add to Category
