--- a/views/clients/pages/home/index.pug
+++ b/views/clients/pages/home/index.pug
@@ -17,3 +17,15 @@ block main
               p.card-text Price: $#{item.priceNew}
               p.card-text Old Price: #{item.price}
               a.btn.btn-primary(href='#') Add to Category
+    .container(style='margin-top: 30px')
+      h2 Sản phẩm mới nhất 
+      .row
+       each item in productNews  
+        .col-md-4
+          .card.product-card.mb-4
+            img.card-img-top.product-img(src=item.thumbnail, alt='Product Image' style='height: 350px')
+            .card-body
+              h5.card-title #{item.title}
+              p.card-text Price: $#{item.priceNew}
+              p.card-text Old Price: #{item.price}
+              a.btn.btn-primary(href='#') Add to Category
