--- a/views/clients/pages/home/index.pug
+++ b/views/clients/pages/home/index.pug
@@ -3,29 +3,28 @@ extends ../../layouts/default.pug
 
 block main 
 
-    h1 Day La Trang Chu 
 
     .container(style='margin-top: 30px')
       h2 Sản phẩm nổi bậc
       .row
        each item in productFeatured  
         .col-md-4
+         a(href="/products/detail/"+item.slug style='text-decoration: none') 
           .card.product-card.mb-4
             img.card-img-top.product-img(src=item.thumbnail, alt='Product Image' style='height: 350px')
             .card-body
               h5.card-title #{item.title}
               p.card-text Price: $#{item.priceNew}
               p.card-text Old Price: #{item.price}
-              a.btn.btn-primary(href='#') Add to Category
     .container(style='margin-top: 30px')
       h2 Sản phẩm mới nhất 
       .row
-       each item in productNews  
-        .col-md-4
-          .card.product-card.mb-4
-            img.card-img-top.product-img(src=item.thumbnail, alt='Product Image' style='height: 350px')
-            .card-body
-              h5.card-title #{item.title}
-              p.card-text Price: $#{item.priceNew}
-              p.card-text Old Price: #{item.price}
-              a.btn.btn-primary(href='#') Add to Category
+        each item in productNews  
+          .col-md-4
+           a(href="/products/detail/"+item.slug style='text-decoration: none') 
+            .card.product-card.mb-4
+              img.card-img-top.product-img(src=item.thumbnail, alt='Product Image' style='height: 350px')
+              .card-body
+                h5.card-title #{item.title}
+                p.card-text Price: $#{item.priceNew}
+                p.card-text Old Price: #{item.price}
