--- a/views/clients/pages/products/index.pug
+++ b/views/clients/pages/products/index.pug
@@ -21,15 +21,16 @@ block main
                 button#search-btn.btn.btn-outline-secondary(type='button') Tìm kiếm 
       .container(style='margin-top: 30px')
         .row
-        each item in product  
-          .col-md-4
-            .card.product-card.mb-4
-              img.card-img-top.product-img(src=item.thumbnail, alt='Product Image' style='height: 350px')
-              .card-body
-                a(href="/products/detail/"+item.slug).card-title #{item.title}
-                p.card-text Price: $#{item.priceNew}
-                p.card-text Old Price: $#{item.price}
-                a.btn.btn-primary(href='#') Add to Category
+          each item in product 
+           .col-md-4
+             a(href="/products/detail/"+item.slug style='text-decoration: none') 
+              .card.product-card.mb-4
+                img.card-img-top.product-img(src=item.thumbnail, alt='Product Image' style='height: 350px')
+                .card-body
+                  h5.card-title #{item.title}
+                  p.card-text Price: $#{item.priceNew}
+                  p.card-text Old Price: $#{item.price}
+                  a.btn.btn-primary(href='#') Add to Category
     if pagination 
       if pagination.currentPage === 1
           .container
