implement update quantity and checked multi to payment

--- a/views/clients/pages/cart/index.pug
+++ b/views/clients/pages/cart/index.pug
@@ -3,8 +3,8 @@ block main
     
     
     .container 
-        h2 Hiện đang có ... trong giỏ hàng 
-        table.table 
+        h2 Hiện đang có #{cart.products.length} sản phẩm trong giỏ hàng 
+        table.table(check-cart-multi)
           thead
             tr 
               th 
@@ -21,21 +21,22 @@ block main
             each item, index in cart.products
               tr 
                 td 
-                  input(type="checkbox", name="ids")
+                  input(type="checkbox", name="ids", value=item.id)
                 td #{index + 1}
                 td 
                   img(src=item.inforProducts.thumbnail, alt="", style='width: 50px; height: 50px')
                 td 
                   a(href="" style='text-decoration: none')  #{item.inforProducts.title}
                 td #{item.inforProducts.priceNew}
-                td #{item.quantity}
-                td #{item.sum}
                 td 
-                  button.btn.btn-danger
+                  input(type="number", name="",value=item.quantity style='width: 50px' inp-quantity=item.productId)
+                td(total) #{item.sum}
+                td 
+                  a(href="/cart/delete/"+item.inforProducts.id).btn.btn-danger
                     i.fa-solid.fa-trash
            else 
               tr 
                 td(colspan='8')
                  h3.text-center Không có sản phẩm nào hết 
-        h3 Tổng tiền: 0 
+        h3(total-price) Tổng tiền: 0 
         button.btn.btn-success Thanh Toán 
