--- a/views/clients/pages/user/register.pug
+++ b/views/clients/pages/user/register.pug
@@ -25,6 +25,11 @@ block main
                           input#form3Example3c.form-control(type='email' name='email' placeholder='email' require=true)
                           label.form-label(for='form3Example3c') Email 
                       .d-flex.flex-row.align-items-center.mb-4
+                        i.fas.fa-envelope.fa-lg.me-3.fa-fw
+                        .form-outline.flex-fill.mb-0(data-mdb-input-init='')
+                          input#form3Example3c.form-control(type='text' name='phone' placeholder='phone' require=true)
+                          label.form-label(for='form3Example3c') Số điện thoại  
+                      .d-flex.flex-row.align-items-center.mb-4
                         i.fas.fa-lock.fa-lg.me-3.fa-fw
                         .form-outline.flex-fill.mb-0(data-mdb-input-init='')
                           input#form3Example4c.form-control(type='password' name='password' placeholder='Mật khẩu' require=true)
