--- a/views/clients/pages/checkout/index.pug
+++ b/views/clients/pages/checkout/index.pug
@@ -3,9 +3,10 @@ extends ../../layouts/default.pug
 block main 
     .container 
         h2 Trang thanh toán 
-        table.table
+        table.table(order-products)
           thead
             tr 
+              th.d-none
               th STT
               th Ảnh 
               th Tên 
@@ -14,16 +15,30 @@ block main
               th Tổng tiền 
               th Hành động 
           tbody
-            each item, index in checkout
+            if checkout 
+              each item, index in checkout
+                tr 
+                  td(data-id=item.productId).d-none
+                  td #{index + 1}
+                  td
+                    img(src=item.thumbnail, alt="", style='width: 50px; height: 50px') 
+                  td #{item.title}
+                  td #{item.priceNew}
+                  td(quantity) #{item.quantity}
+                  td #{item.total}
+                  td 
+                    button.btn.btn-danger Xóa 
+            else
               tr 
-                td #{index + 1}
-                td
-                  img(src=item.thumbnail, alt="", style='width: 50px; height: 50px') 
-                td #{item.title}
-                td #{item.priceNew}
-                td #{item.quantity}
-                td #{item.total}
-                td 
-                  button.btn.btn-danger Xóa 
+                td(colspan='7') 
+                  h3.text-center Bạn chưa chọn sản phẩm nào  
         h1 Tổng tiền cần thanh toán: #{totalPrice}  
-        
+        if user.address.length > 0 
+          .container
+            h2 Điền thông tin 
+            form(action="/checkout/order" method="POST" form-order) 
+              input(type="text", name="listOrder" inp-order).d-none
+              button.btn.btn-primary(type='submit' btn-submit-order) Xác nhận thanh toán 
+        else 
+          h3 Bạn chưa có địa chỉ vui lòng vào trang cá nhân thêm một địa chỉ 
+           
